# voyageur

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-setup.md  1-2-shared-data-models.md  1-3-module-interface-protocols.md  2-1-harmonic-tidal-model.md  2-2-direct-route-propagation-algorithm.md  2-3-ascii-80-column-output-formatter.md  2-4-cli-route-planning-command.md  3-1-coastal-obstacle-detection.md  3-2-safety-threshold-evaluation.md  3-3-boat-profile-management.md  4-1-isochrone-grid-with-obstacle-avoidance.md  4-2-multi-criteria-route-computation.md  4-3-optimal-departure-time-suggestion.md  4-4-route-re-planning-from-current-position.md  5-1-shom-tidal-api-client.md  5-2-weather-forecast-api-client.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  project-context.md
tests/: conftest.py  test_cartography.py  test_cli.py  test_models.py  test_output.py  test_protocols.py  test_routing.py  test_scaffold.py  test_tidal.py  test_weather.py
voyageur/: models.py
voyageur/cartography/: impl.py  protocol.py
voyageur/cartography/data/: normandy.geojson
voyageur/cli/: config.py  main.py
voyageur/output/: formatter.py
voyageur/routing/: departure.py  isochrone.py  multi.py  planner.py  safety.py
voyageur/tidal/: impl.py  protocol.py  shom_client.py
voyageur/tidal/data/: ports.yaml
voyageur/weather/: openmeteo.py  protocol.py
